// Copyright 2019 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultdb.rpc.v1;

import "google/api/field_behavior.proto";
import "go.chromium.org/luci/resultdb/proto/rpc/v1/predicate.proto";

option go_package = "go.chromium.org/luci/resultdb/proto/rpc/v1;rpcpb";

// BigQueryExport indicates that results in this invocation should be exported
// to BigQuery after finalization.
message BigQueryExport {
    // Name of the BigQuery project.
    string project = 1 [ (google.api.field_behavior) = REQUIRED ];

    // Name of the BigQuery Dataset.
    string dataset = 2 [ (google.api.field_behavior) = REQUIRED ];

    // Name of the BigQuery Table.
    string table = 3 [ (google.api.field_behavior) = REQUIRED ];

    // TestResultExport indicates that test results should be exported.
    message TestResults {
      // Use predicate to query test results that should be exported to
      // BigQuery table.
      TestResultPredicate predicate = 1;
    }
    TestResults test_results = 4;
}
